; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_ablkcipher.c_ablkcipher_done_fast.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_ablkcipher.c_ablkcipher_done_fast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ablkcipher_walk = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ablkcipher_walk*, i32)* @ablkcipher_done_fast to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ablkcipher_done_fast(%struct.ablkcipher_walk* %0, i32 %1) #0 {
  %3 = alloca %struct.ablkcipher_walk*, align 8
  %4 = alloca i32, align 4
  store %struct.ablkcipher_walk* %0, %struct.ablkcipher_walk** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ablkcipher_walk*, %struct.ablkcipher_walk** %3, align 8
  %6 = getelementptr inbounds %struct.ablkcipher_walk, %struct.ablkcipher_walk* %5, i32 0, i32 1
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @scatterwalk_advance(i32* %6, i32 %7)
  %9 = load %struct.ablkcipher_walk*, %struct.ablkcipher_walk** %3, align 8
  %10 = getelementptr inbounds %struct.ablkcipher_walk, %struct.ablkcipher_walk* %9, i32 0, i32 0
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @scatterwalk_advance(i32* %10, i32 %11)
  ret void
}

declare dso_local i32 @scatterwalk_advance(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
